Added device and dashboard css (empty though), added dynamic sidebar element load (with fake data meanwhile), added logout route (which redirects to login) and added filter for device/:id view

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="stylesheet" href="styles/login.css" />
         <link rel="stylesheet" href="styles/sidebar.css" />
+        <link rel="stylesheet" href="styles/dashboard.css" />
+        <link rel="stylesheet" href="styles/device.css" />
         
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-route/angular-route.min.js"></script>
