--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-route/angular-route.min.js"></script>
+        <script src="node_modules/plotly.js/dist/plotly.min.js"></script>
         
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/directives.js"></script>
+
+        <script src="js/mainChart.js"></script>
     </head>    
 
     <body>
