--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/directives.js"></script>
-
+        
+        <!-- Fake charts 
+            This fake charts should be directives to 
+            follow Angular Style Guides & Best Practices.
+        -->
         <script src="js/mainChart.js"></script>
+        <script src="js/deviceChart.js"></script>
     </head>    
 
     <body>
