Optimizado el grafico, incluido apis, agregado grafico para datos gps

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
 
     <div ui-view></div>
 
+    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
