basic functionallity enabled

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
     <div ui-view></div>
 
-    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src='//maps.googleapis.com/maps/api/js'></script>
     
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
