--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,10 @@
 
     <script src='//maps.googleapis.com/maps/api/js'></script>
     
-    <!-- build:js(src) scripts/vendor.js -->
+    <!-- build:js({src,bower_components/angular-18n/angular-locale_es-cl.js}) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
+    <script src="../bower_components/angular-i18n/angular-locale_es-cl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
