--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html ng-app="webapp">
   <head>
     <meta charset="utf-8">
-    <title>webapp</title>
-    <meta name="description" content="">
+    <title>IMS App - Industrial Management Services</title>
+    <meta name="description" content="Sistema de Monitoreo en tiempo Real.">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -18,6 +18,20 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
+
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-60685464-13', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -28,7 +42,7 @@
     <div ui-view></div>
 
     <script src='//maps.googleapis.com/maps/api/js'></script>
-    
+
     <!-- build:js({src,bower_components/angular-18n/angular-locale_es-cl.js}) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
