--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     <!-- build:js({src,bower_components/angular-18n/angular-locale_es-cl.js}) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
+    <script src="../bower_components/highcharts/highcharts.js"></script>
     <script src="../bower_components/angular-i18n/angular-locale_es-cl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
